--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <h2>Usefullhandznexusltd</h2>
+                <h2>Usefulhandz - Nexus Ltd</h2>
             </div>
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#properties">Properties</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="#about">BBK</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="login.html" class="btn-login">Login</a></li>
             </ul>
@@ -168,7 +168,7 @@
         <div class="container">
             <div class="about-content">
                 <div class="about-text">
-                    <h2>About Usefullhandznexusltd</h2>
+                    <h2>About Usefulhandznexusltd</h2>
                     <p>With over decades experience in luxury real estate, we have established itself as the premier destination for discerning buyers and sellers. Our commitment to excellence, integrity, and personalized service sets us apart in the competitive real estate market.</p>
                     <p>We specialize in luxury properties across major metropolitan areas, offering unparalleled market knowledge and a vast network of connections. Whether you're looking for your dream home or seeking to sell a prestigious property, our team of expert agents is here to guide you through every step of the process.</p>
                     <div class="about-stats">
@@ -199,7 +199,7 @@
             <h2>What Our Clients Say</h2>
             <div class="testimonials-grid">
                 <div class="testimonial-card">
-                    <p>"Usefullhandznexusltd found us the perfect home in just two weeks. Their attention to detail and market knowledge is exceptional."</p>
+                    <p>"Usefulhandznexusltd found us the perfect home in just two weeks. Their attention to detail and market knowledge is exceptional."</p>
                     <h4>Emmason</h4>
                     <p class="role">Home Buyer</p>
                 </div>
@@ -225,8 +225,8 @@
                 <div class="contact-info">
                     <h3>Contact Information</h3>
                     <p><i class="fas fa-map-marker-alt"></i> Suit 61, Eputu Mall, Eputu B/Stop, Ibej Lekki Lagos</p>
-                    <p><i class="fas fa-phone"></i> (234) 701-020-154</p>
-                    <p><i class="fas fa-envelope"></i> info@Usefullhandznexusltd.com</p>
+                    <p><i class="fas fa-phone"></i> (234) 701-020-1544</p>
+                    <p><i class="fas fa-envelope"></i> info@Usefulhandznexusltd.com</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook"></i></a>
                         <a href="#"><i class="fab fa-twitter"></i></a>
@@ -247,7 +247,7 @@
 
     <!-- WhatsApp Chat -->
     <div class="whatsapp-chat">
-        <a href="https://wa.me/15551234567" target="_blank" class="whatsapp-btn">
+        <a href="https://wa.me/2347010201544" target="_blank" class="whatsapp-btn">
             <i class="fab fa-whatsapp"></i>
             <span>Chat on WhatsApp</span>
         </a>
@@ -258,7 +258,7 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>Usefullhandznexusltd</h3>
+                    <h3>Usefulhandznexusltd</h3>
                     <p>Your trusted partner in luxury real estate. Finding dream homes since decades.</p>
                 </div>
                 <div class="footer-section">
@@ -289,7 +289,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Usefullhandznexusltd. All rights reserved.</p>
+                <p>&copy; 2025 Usefulhandznexusltd. All rights reserved.</p>
             </div>
         </div>
     </footer>
